--- a/flavors/mocha.css
+++ b/flavors/mocha.css
@@ -29,9 +29,12 @@
   --crust: #11111b;
   --shadow: #010409;
   --accent: var(--maroon);
+  color-scheme: dark;
 }
 
-
+select, option {
+  background-color: var(--base);
+}
 
 #setting_sd_model_checkpoint > :first-child{
   background-color: var(--base);
