--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@
   --crust: #11111b;
   --shadow: #010409;
   --accent: var(--maroon);
+  color-scheme: dark;
+}
+select, option {
+  background-color: var(--base);
 }
 
 #setting_sd_model_checkpoint > :first-child{
